docker-app-3-in-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-app-service
spec:
  selector:
    app: docker-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app 
    spec:
      containers:
        - name: docker-app-container  
          image: wisebeard/docker_app-custom
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /docker-app/
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /docker-app
            pathType: Prefix
            backend:
              service:
                name: docker-app-service
                port:
                  number: 80
